$Id: ChangeLog,v 1.103 2004/08/18 16:48:12 haraldkipp Exp $

2004-08-18  Harald Kipp  <harald.kipp@egnite.de>

	* crt/putf.c: Compile error on non-Harvard architecture fixed.

	* app/*/Makefile: Replaced top_srcdir by parent directory to
	allow independant application directories.

	* tools/nutconf, conf/*.nut: Tool is working now on Win32 and 
	Linux for avr-gvv.

	* makedefs.avr-gcc, makerules.avr-gcc: Copied from .gcc to have
	a more consistent naming convention. The original files may be
	removed later.


2004-08-11  Matthias Ringwald <mringwal@inf.ethz.ch>
    * dev/unix_devs.c: removed a potential dead lock,
    and now initialized a pthread_mutex before usage

    * doc/gen/nutdoc_en.txt: some docu added for mutex, semaphore
    and the unix emulation
    
2004-08-09  Matthias Ringwald <mringwal@inf.ethz.ch>
    * dev/unix_devs.c, include/dev/unix_devs.c, include/arch/unix.h:
    added a third uart as devDebug2, devUart2, devUsartAvr2
    for testing in unix emulation
    
2004-08-05  Oliver Schulz  <olischulz@web.de>

	* crt/filelength.c: For VIRTUALDEVICEs the return value of the ioctl 
	function was returned, which is obviosly wrong. Now the correct 
	filelength value is returned to the caller.

2004-08-05  Matthias Ringwald <mringwal@inf.ethz.ch>
    * dev/irqreg.h, os/thread.c, os/arch/unix_nutinit.c,
    os/arch/unix_thread.c: added unix emulation hook in NutThreadYield
    to safely process NutPostEventAsync calls occuring in non Nut/OS
    threads.
    
    * dev/unix_devs.c, include/dev/unix_devs.c: rewrote the unix read
    function again using the new unix NutThreadYield hook to call
    the NutPostEventAsync function safely (fast & correct).
    _write(nf, 0, 0) aka fflush is ignored on unix emulation.

    * dev/unix_devs.c: CTRL-C on terminal terminates running
    unix emulation apps nows.

    * os/nutinit.c, os/arch/unix_eeprom.c, include/arch/unix.h:
    added an avr-libc compatible (but yet uncomplete) eeprom simulation